# garmin-parser

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes_activities.py  routes_auth.py  routes_exports.py  routes_health.py
backend/app/core/: __init__.py  auth.py  config.py  cors.py
backend/app/garmin/: __init__.py  cache.py  client.py  exceptions.py  registry.py
backend/app/markdown/: __init__.py  renderer.py
backend/app/markdown/templates/: activity.md.j2  batch.md.j2
backend/app/processing/: __init__.py  mapper.py  metrics.py
backend/app/schemas/: __init__.py  activities.py  auth.py  exports.py  internal.py
backend/garmin_scraper_backend.egg-info/: SOURCES.txt  requires.txt
backend/tests/: test_auth_api.py  test_batch_export.py  test_cors.py  test_exports_api.py  test_garmin_cache.py  test_health.py  test_mapper.py  test_markdown_renderer.py  test_recent_activities_api.py  test_schemas.py
backend/tests/fixtures/: garmin_activity_details.json  garmin_activity_splits.json  garmin_activity_summary.json  garmin_body_battery.json  garmin_daily_stats.json  garmin_hr_zones.json  garmin_hrv_data.json  garmin_sleep_data.json
docs/adr/: 0001-decoupled-fastapi-react.md
docs/examples/: batch-activities.md  single-activity.md
docs/plans/: 2026-04-19-garmin-scraper-dat-plan.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  types.ts
(+3 files in other folders)
