[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-scraper-backend"
version = "0.1.0"
description = "FastAPI backend for exporting Garmin Connect running activities to LLM-friendly Markdown."
readme = { text = "FastAPI backend for exporting Garmin Connect running activities to LLM-friendly Markdown.", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "starlette>=0.46.0,<1.0.0",
  "anyio>=4.0.0,<4.13.0",
  "uvicorn[standard]>=0.30.0",
  "garminconnect>=0.2.25",
  "pandas>=2.2.0",
  "fitparse>=1.2.0",
  "jinja2>=3.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
